--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,12 +3,12 @@ name: Build and deploy .NET application to Container App silo
 on:
   push:
     branches:
-    - deploy2
+    - deploy3
 
 env:
   
   # alphanumeric string under 14 characters
-  RESOURCE_GROUP_NAME: crgrpc
+  RESOURCE_GROUP_NAME: crgrpc3
 
   # specify your preferred region
   REGION: eastus
@@ -51,7 +51,7 @@ jobs:
         inlineScript: >
           echo "Creating resources"
 
-          az deployment group create --resource-group ${{ env.RESOURCE_GROUP_NAME }} --template-file '/github/workspace/Azure/main.bicep' --debug
+          az deployment group create --resource-group ${{ env.RESOURCE_GROUP_NAME }} --template-file ${{ github.workspace }}/Azure/main.bicep --debug
 
   build:
     runs-on: ubuntu-latest
